# waypoints

./: .gitignore  README.md
.clangd/index/: waypoints_rviz_plugins.cc.7D7D174C0BBCA865.idx  waypoints_tool.h.6A5D0D9755C23F3D.idx
waypoints/: CMakeLists.txt  README.md  todolist.md
waypoints/include/follow_waypoints/: client.h
waypoints/launch/: follower.launch  move_base_gmapping_5cm.launch  recorder.launch  waypoints.rviz
waypoints/nodes/: smach_tutorials
waypoints/src/follow_waypoints/: record_base_link.cc  smach_tutorials.py  waypoints_follower.cc
waypoints_rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
waypoints_rviz_plugins/free_model/: IPhoneSE1.dae
waypoints_rviz_plugins/include/: waypoints_tool.h
waypoints_rviz_plugins/src/: waypoints_rviz_plugins.cc
