<package>
  <name>waypoints_rviz_plugins</name>
  <version>0.11.0</version>
  <description>
    plugins for setting waypoints in rviz 
  </description>
  <maintainer email="booney@gmail.com">booney</maintainer>
  <license>BSD</license>

  <author>Booney</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
